fix brand logo alignments

--- a/src/css/pages/skills.scss
+++ b/src/css/pages/skills.scss
@@ -81,7 +81,7 @@
 
     .brands {
   
-        
+        text-align: center;
         margin: 0 auto;
     
         li{
